MFC r254572: Force keyboards which don't have the required HID fields to use the USB BOOT protocol for now.

PR:		usb/181425

Former-commit-id: cc704ee2e631e470b9321080f5eec10851bfa311